--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -31,7 +31,7 @@ These are deeply integrated into Open WebUI and generally don't require external
 - **Memory**: The ability for models to remember facts about you across chats.
 - **RAG (Knowledge)**: The ability to query uploaded documents (`#`).
 
-In [**Native Mode**](#built-in-system-tools-native-mode), these features are exposed as **Tools** that the model can call independently.
+In [**Native Mode**](#built-in-system-tools-nativeagentic-mode), these features are exposed as **Tools** that the model can call independently.
 
 ### 2. Workspace Tools (Custom Plugins)
 These are **Python scripts** that run directly within the Open WebUI environment.
@@ -84,9 +84,9 @@ You can also let your LLM auto-select the right Tools using the [**AutoTool Filt
 
 ---
 
-## Tool Calling Modes: Default vs. Native (Agentic Mode) {#tool-calling-modes-default-vs-native}
+## Tool Calling Modes: Default vs. Native
 
-Open WebUI offers two distinct ways for models to interact with tools. Choosing the right mode depends on your model's capabilities and your performance requirements.
+Open WebUI offers two distinct ways for models to interact with tools: a standard **Default Mode** and a high-performance **Native Mode (Agentic Mode)**. Choosing the right mode depends on your model's capabilities and your performance requirements.
 
 ### 🟡 Default Mode (Prompt-based)
 In Default Mode, Open WebUI manages tool selection by injecting a specific prompt template that guides the model to output a tool request.
@@ -144,7 +144,7 @@ These models excel at multi-step reasoning, proper JSON formatting, and autonomo
 | **Logic** | Prompt-based (Open WebUI) | Model-native (API/Ollama) |
 | **Complex Chaining** | ⚠️ Limited | ✅ Excellent |
 
-### Built-in System Tools (Native/Agentic Mode) {#built-in-system-tools-native-mode}
+### Built-in System Tools (Native/Agentic Mode)
 
 🛠️ When **Native Mode (Agentic Mode)** is enabled, Open WebUI automatically injects powerful system tools based on the features toggled for the chat. This unlocks truly agentic behaviors where capable models (like GPT-5, Claude 4.5 Sonnet, Gemini 3 Flash, or MiniMax M2.1) can perform multi-step research, explore knowledge bases, or manage user memory autonomously.
 
