--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -130,7 +130,7 @@ docker run -d -p 3000:8080 -e HF_ENDPOINT=https://hf-mirror.com/ --add-host=host
 
 ### Q: Why are my reasoning model's thinking blocks showing as raw text instead of being hidden?
 
-**A:** This happens if the model's thinking tags are not recognized by Open WebUI. You can customize the tags in the model's Advanced Parameters. For more details, see the **[Reasoning & Thinking Models](./features/chat-features/reasoning-models.mdx)** guide and our **[Reasoning Models Troubleshooting Guide](/troubleshooting/reasoning-models)**.
+**A:** This happens if the model's thinking tags are not recognized by Open WebUI. You can customize the tags in the model's Advanced Parameters. For more details, see the **[Reasoning & Thinking Models](/features/chat-features/reasoning-models)** guide.
 
 ### Q: RAG with Open WebUI is very bad or not working at all. Why?
 
