--- a/docs/getting-started/quick-start/starting-with-ollama.mdx
+++ b/docs/getting-started/quick-start/starting-with-ollama.mdx
@@ -92,7 +92,7 @@ ollama serve --reasoning-parser deepseek_r1
 This ensures that thinking blocks are properly separated from the final answer and displayed in a collapsible section in Open WebUI.
 
 :::tip
-The `deepseek_r1` parser works for most reasoning models, including Qwen3. If you encounter issues, see our [Reasoning Models Troubleshooting Guide](/troubleshooting/reasoning-models) for alternative parsers and detailed troubleshooting steps.
+The `deepseek_r1` parser works for most reasoning models, including Qwen3. If you encounter issues, see our [Reasoning & Thinking Models Guide](/features/chat-features/reasoning-models) for alternative parsers and detailed troubleshooting steps.
 :::
 
 ---
