--- a/docs/features/index.mdx
+++ b/docs/features/index.mdx
@@ -170,7 +170,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🖊️ **Typing Indicators in Channels**: Enhance collaboration with real-time typing indicators in channels, keeping everyone engaged and informed.
 
-- 👤 **User Status Indicators**: Quickly view a user's status by clicking their profile image in channels, providing better coordination and availability insights.
+- 👤 **User Status Indicators**: Quickly view a user's status by clicking their profile image in channels, providing better coordination and availability insights. This feature can be globally disabled by an administrator (Admin > Settings > General).
 
 - 💬 **Chat Controls**: Easily adjust parameters for each chat session, offering more precise control over your interactions.
 
