--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -163,7 +163,7 @@ These models excel at multi-step reasoning, proper JSON formatting, and autonomo
 | `generate_image` | Generates a new image based on a prompt (supports `steps`). | `ENABLE_IMAGE_GENERATION` enabled. |
 | `edit_image` | Edits an existing image based on a prompt and URL. | `ENABLE_IMAGE_EDIT` enabled.|
 | **Memory** | | |
-| `search_memories` | Searches the user's personal memory/personalization bank. | Memory feature enabled. |
+| `search_memories` | Searches the user's personal memory/personalization bank. Supports an optional `count` parameter to specify how many memories to return (default: 5). | Memory feature enabled. |
 | `add_memory` | Stores a new fact in the user's personalization memory. | Memory feature enabled. |
 | `replace_memory_content` | Updates an existing memory record by its unique ID. | Memory feature enabled. |
 | **Notes** | | |
