docs: update versioning to v0.7.0 and document new features
- Standardize versioning from 0.7 to 0.7.0 across all guides and Docker tags
- Update Knowledge Base tool documentation with new query_knowledge_files and query_knowledge_bases (metadata search) tools
- Add documentation for the new Model Activity Chart in Evaluations
- Add WHISPER_MULTILINGUAL env var and update WHISPER_VAD_FILTER configuration details

--- a/docs/features/evaluation/index.mdx
+++ b/docs/features/evaluation/index.mdx
@@ -86,7 +86,17 @@ This is a sample leaderboard layout:
 
 ![Leaderboard Example](/images/evaluation/leaderboard.png)
 
-### Topic-Based Reranking
+### Model Activity Tracking
+
+In addition to overall Elo ratings, you can now view a model's performance history through the **Model Activity Chart**. This feature provides a chronological view of how a model's evaluation has evolved over time.
+
+- **Diverging Chart**: The chart displays wins (positive) and losses (negative) daily or weekly, giving you a clear visual indicator of the model's reliability over time.
+- **Time Ranges**: You can toggle between different time horizons: **30 Days**, **1 Year**, or **All Time**.
+- **Weekly Aggregation**: For longer time ranges (1Y and All), the data is automatically aggregated by week to provide a smoother, more readable trend.
+
+To view the activity chart, click on a model in the Leaderboard to open its detailed evaluation modal.
+
+![Model Activity Chart](/images/evaluation/activity-chart.png)
 
 When you rate chats, you can **tag them by topic** for more granular insights. This is especially useful if you’re working in different domains like **customer service, creative writing, technical support**, etc.
 
