--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -12,7 +12,7 @@ As new variables are introduced, this page will be updated to reflect the growin
 
 :::info
 
-This page is up-to-date with Open WebUI release version [v0.7](https://github.com/open-webui/open-webui/releases/tag/v0.7), but is still a work in progress to later include more accurate descriptions, listing out options available for environment variables, defaults, and improving descriptions.
+This page is up-to-date with Open WebUI release version [v0.7.0](https://github.com/open-webui/open-webui/releases/tag/v0.7.0), but is still a work in progress to later include more accurate descriptions, listing out options available for environment variables, defaults, and improving descriptions.
 
 :::
 
@@ -3642,7 +3642,6 @@ Note: If none of the specified languages are available and `en` was not in your 
 - Type: `bool`
 - Default: `False`
 - Description: Specifies whether to apply a Voice Activity Detection (VAD) filter to Whisper Speech-to-Text.
-- Persistence: This environment variable is a `PersistentConfig` variable.
 
 #### `WHISPER_MODEL_AUTO_UPDATE`
 
@@ -3655,6 +3654,12 @@ Note: If none of the specified languages are available and `en` was not in your 
 - Type: `str`
 - Default: `None`
 - Description: Specifies the ISO 639-1 language Whisper uses for STT (ISO 639-2 for Hawaiian and Cantonese). Whisper predicts the language by default.
+
+#### `WHISPER_MULTILINGUAL`
+
+- Type: `bool`
+- Default: `False`
+- Description: Toggles whether to use the multilingual Whisper model. When set to `False`, the system will use the English-only model for better performance in English-centric tasks. When `True`, it supports multiple languages.
 
 ### Speech-to-Text (OpenAI)
 
