--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -169,6 +169,10 @@ You are now ready to start using Open WebUI!
 ## Using Open WebUI with Ollama
 If you're using Open WebUI with Ollama, be sure to check out our [Starting with Ollama Guide](/getting-started/quick-start/starting-with-ollama) to learn how to manage your Ollama instances with Open WebUI.
 
+## Help Us Improve Open WebUI 🧪
+
+**Want to help make Open WebUI better?** Consider running the [development branch](/#using-the-dev-branch-)! Testing dev builds is one of the most valuable contributions you can make—no code required. Just use it and report any issues you find on [GitHub](https://github.com/open-webui/open-webui/issues).
+
 ## Join the Community
 
 Need help? Have questions? Join our community:
