--- a/docs/getting-started/updating.mdx
+++ b/docs/getting-started/updating.mdx
@@ -19,6 +19,11 @@ Keeping Open WebUI updated ensures you have the latest features, security patche
     2.  Designating a master worker using `ENABLE_DB_MIGRATIONS=True` (default) on one instance and `False` on others.
   Once migrations complete, you can run with multiple workers normally.
 :::
+
+:::tip Help Us Test Before Release
+
+**Want to catch bugs before they hit stable releases?** Consider running the [development branch](/#using-the-dev-branch-) instead. Testing dev builds is one of the most valuable contributions you can make.
+
 :::
 
 ## Manual Update
