--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -23,6 +23,6 @@ This project thrives on community spirit and passion. If you still face problems
 
 ### 🧪 Help Prevent Future Issues
 
-**Want to help prevent issues like this from reaching stable releases?** Consider running the [development branch](/getting-started#using-the-dev-branch-)! Testing dev builds is one of the most valuable contributions you can make—no code required. Just use it and report any issues you find.
+**Want to help prevent issues like this from reaching stable releases?** Consider running the [development branch](/#using-the-dev-branch-)! Testing dev builds is one of the most valuable contributions you can make—no code required. Just use it and report any issues you find.
 
 Together, let's harness these opportunities to create the best environment and keep pushing the boundaries of what we can achieve with our project. Thank you from the bottom of our hearts for your understanding, cooperation, and belief in our mission! 🙏
