--- a/docs/troubleshooting/multi-replica.mdx
+++ b/docs/troubleshooting/multi-replica.mdx
@@ -127,7 +127,9 @@ The `/app/backend/data` directory is not shared or is not consistent across repl
 This is typically caused by infrastructure latency (Network Latency to the database or Disk I/O latency for SQLite) that is inherently higher in cloud environments compared to local NVMe/SSD storage and local networks.
 
 **Solution:**
-Refer to the **[Cloud Infrastructure Latency](/tutorials/tips/performance#%EF%B8%8F-cloud-infrastructure-latency)** section in the Performance Guide for a detailed breakdown of diagnosis and mitigation strategies.
+Refer to the **[Cloud Infrastructure Latency](/troubleshooting/performance#%EF%B8%8F-cloud-infrastructure-latency)** section in the Performance Guide for a detailed breakdown of diagnosis and mitigation strategies.
+
+If you need more tips for performance improvements, check out the full [Optimization & Performance Guide](/troubleshooting/performance).
 
 ### 7. Optimizing Database Performance
 
@@ -196,7 +198,7 @@ While Open WebUI is designed to be stateless with proper Redis configuration, en
 ## Related Documentation
 
 - [Environment Variable Configuration](/getting-started/env-configuration)
-- [Optimization, Performance & RAM Usage](/tutorials/tips/performance)
+- [Optimization, Performance & RAM Usage](/troubleshooting/performance)
 - [Troubleshooting Connection Errors](/troubleshooting/connection-error)
 - [Logging Configuration](/getting-started/advanced-topics/logging)
 
